@@ -249,41 +249,6 @@ def test_applicable_postpone(tmpdir):
     assert request.state == Request.POSTPONE
 
 
-def generate_applicable_snippets(tmp, *exitcodes):
-    appdir = tmp / 'applicable'
-    os.mkdir(str(appdir))
-    for i, exitcode in enumerate(exitcodes):
-        with open(str(appdir / str(i)), 'w') as f:
-            f.write('exit {}\n'.format(exitcode))
-            os.fchmod(f.fileno(), 0o755)
-    return appdir
-
-
-def test_applicable_directory(tmpdir):
-    appdir = generate_applicable_snippets(tmpdir, 0, 69)
-    request = Request(0, 1, script='true', applicable=str(appdir),
-                      path=str(tmpdir))
-    request.save()
-    assert 69 == request.is_applicable()
-
-
-def test_applicable_dir_first_nonzero_script_wins(tmpdir):
-    appdir = generate_applicable_snippets(tmpdir, 1, 75, 69)
-    request = Request(0, 1, script='true', applicable=str(appdir),
-                      path=str(tmpdir))
-    request.save()
-    assert 1 == request.is_applicable()
-
-
-def test_applicable_dir_should_skip_nonexecutable_files(tmpdir):
-    appdir = generate_applicable_snippets(tmpdir, 1, 0)
-    os.chmod(str(appdir / '0'), 0o644)
-    request = Request(0, 1, script='true', applicable=str(appdir),
-                      path=str(tmpdir))
-    request.save()
-    assert 0 == request.is_applicable()
-
-
 def test_execute_should_cd_to_requestpath(tmpdir):
     request = Request(0, 1, script='echo foo > localfile', path=str(tmpdir))
     request.execute()
